[gd_scene load_steps=17 format=3 uid="uid://cacoxw1qe8t3b"]

[ext_resource type="Script" path="res://scenes/niveles/nivel1.gd" id="1_q1fmk"]
[ext_resource type="PackedScene" uid="uid://b4ip1utf0olap" path="res://scenes/Players/Giovanni_bueno.tscn" id="2_uxrv1"]
[ext_resource type="Texture2D" uid="uid://ch83parrqxh5o" path="res://resources/bgnd.png" id="3_dk8vs"]
[ext_resource type="Texture2D" uid="uid://bvj70grhld2xd" path="res://resources/Sprites/8-Tile-Sets/Tile-Sets (64-64).png" id="3_o6ysv"]
[ext_resource type="PackedScene" uid="uid://bj41irehtkyj8" path="res://scenes/niveles/timer.tscn" id="3_x5bvh"]
[ext_resource type="Script" path="res://scripts/Niveles/Food.gd" id="4_4vaue"]
[ext_resource type="Texture2D" uid="uid://dbo7kh6xv5l4s" path="res://Textures/FreePixelFood/Assets/FreePixelFood/Sprite/Food/Cheese.png" id="5_spo2y"]
[ext_resource type="Script" path="res://scenes/niveles/Door.gd" id="6_0oint"]
[ext_resource type="Script" path="res://scenes/niveles/ResetArea.gd" id="6_r4nit"]
[ext_resource type="Texture2D" uid="uid://be1nc88yb2i2n" path="res://resources/Sprites/2-Door/1-Closed/1.png" id="7_8cnrk"]
[ext_resource type="Texture2D" uid="uid://dsi1ial8s80p8" path="res://resources/Sprites/2-Door/2-Opening/2.png" id="8_4ljem"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o5lhx"]
size = Vector2(13, 15.6667)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qsacf"]
texture = ExtResource("3_o6ysv")
0:0/size_in_atlas = Vector2i(2, 2)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.5, -16, 16.5, -16, 16.5, 17, -15.5, 17)
2:0/size_in_atlas = Vector2i(2, 2)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.5, -16.5, 17.5, -16.5, 17.5, 16.5, -16.5, 16.5)
4:0/size_in_atlas = Vector2i(2, 2)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.5, -16.5, 17.5, -16.5, 17.5, 16.5, -16.5, 16.5)
6:0/size_in_atlas = Vector2i(2, 2)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.5, -16.5, 17.5, -16.5, 17.5, 16.5, -16.5, 16.5)
8:0/size_in_atlas = Vector2i(2, 2)
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.5, -16.5, 17.5, -16.5, 17.5, 16.5, -16.5, 16.5)
10:0/size_in_atlas = Vector2i(2, 2)
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.5, -16.5, 15.5, -16.5, 15.5, 17, -16.5, 17)
0:2/size_in_atlas = Vector2i(2, 2)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.5, -17, 16, -17, 16, 16.5, -15.5, 16.5)
2:2/size_in_atlas = Vector2i(2, 2)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.5, -16.5, 17.5, -16.5, 17.5, 16.5, -16.5, 16.5)
4:2/size_in_atlas = Vector2i(2, 2)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.5, -16.5, 17.5, -16.5, 17.5, 16.5, -16.5, 16.5)
6:2/size_in_atlas = Vector2i(2, 2)
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.5, -16.5, 17.5, -16.5, 17.5, 16.5, -16.5, 16.5)
8:2/size_in_atlas = Vector2i(2, 2)
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.5, -16.5, 17.5, -16.5, 17.5, 16.5, -16.5, 16.5)
10:2/size_in_atlas = Vector2i(2, 2)
10:2/0 = 0
10:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:2/0/physics_layer_0/angular_velocity = 0.0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.5, -16.5, 15.5, -16.5, 15.5, 17, -16.5, 17)
3:9/0 = 0
3:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:9/0/physics_layer_0/angular_velocity = 0.0
3:10/0 = 0
3:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:10/0/physics_layer_0/angular_velocity = 0.0
3:11/0 = 0
3:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:11/0/physics_layer_0/angular_velocity = 0.0
3:12/0 = 0
3:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:12/0/physics_layer_0/angular_velocity = 0.0
16:12/0 = 0
16:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:12/0/physics_layer_0/angular_velocity = 0.0
16:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -8, 8, -8, 8, 8, -7, 8)
17:12/0 = 0
17:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:12/0/physics_layer_0/angular_velocity = 0.0
17:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:12/0 = 0
18:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:12/0/physics_layer_0/angular_velocity = 0.0
18:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:12/0 = 0
19:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:12/0/physics_layer_0/angular_velocity = 0.0
19:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 7, -8, 7, 8, -8, 8)
20:12/0 = 0
20:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:12/0/physics_layer_0/angular_velocity = 0.0
20:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
21:12/0 = 0
21:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:12/0/physics_layer_0/angular_velocity = 0.0
21:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 7, -8, 7, 8, -8, 8)
16:16/0 = 0
16:16/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:16/0/physics_layer_0/angular_velocity = 0.0
16:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:16/0 = 0
17:16/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:16/0/physics_layer_0/angular_velocity = 0.0
17:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:16/0 = 0
18:16/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:16/0/physics_layer_0/angular_velocity = 0.0
18:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:16/0 = 0
19:16/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:16/0/physics_layer_0/angular_velocity = 0.0
19:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 7, -8, 7, 8, -8, 8)
20:16/0 = 0
20:16/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:16/0/physics_layer_0/angular_velocity = 0.0
20:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
21:16/0 = 0
21:16/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:16/0/physics_layer_0/angular_velocity = 0.0
21:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
12:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:0/0/physics_layer_0/angular_velocity = 0.0
13:1/0 = 0
13:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:1/0/physics_layer_0/angular_velocity = 0.0
14:1/0 = 0
14:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:1/0/physics_layer_0/angular_velocity = 0.0
15:1/0 = 0
15:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:1/0/physics_layer_0/angular_velocity = 0.0
15:2/0 = 0
15:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:2/0/physics_layer_0/angular_velocity = 0.0
16:2/0 = 0
16:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:2/0/physics_layer_0/angular_velocity = 0.0
17:2/0 = 0
17:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:2/0/physics_layer_0/angular_velocity = 0.0
18:2/0 = 0
18:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:2/0/physics_layer_0/angular_velocity = 0.0
19:2/0 = 0
19:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:2/0/physics_layer_0/angular_velocity = 0.0
19:3/0 = 0
19:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:3/0/physics_layer_0/angular_velocity = 0.0
20:3/0 = 0
20:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:3/0/physics_layer_0/angular_velocity = 0.0
21:3/0 = 0
21:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:3/0/physics_layer_0/angular_velocity = 0.0
21:2/0 = 0
21:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:2/0/physics_layer_0/angular_velocity = 0.0
21:0/0 = 0
21:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:0/0/physics_layer_0/angular_velocity = 0.0
20:0/0 = 0
20:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:0/0/physics_layer_0/angular_velocity = 0.0
19:0/0 = 0
19:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:0/0/physics_layer_0/angular_velocity = 0.0
18:0/0 = 0
18:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:0/0/physics_layer_0/angular_velocity = 0.0
17:0/0 = 0
17:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:0/0/physics_layer_0/angular_velocity = 0.0
16:0/0 = 0
16:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:0/0/physics_layer_0/angular_velocity = 0.0
15:0/0 = 0
15:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:0/0/physics_layer_0/angular_velocity = 0.0
14:0/0 = 0
14:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:0/0/physics_layer_0/angular_velocity = 0.0
13:0/0 = 0
13:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:0/0/physics_layer_0/angular_velocity = 0.0
12:1/0 = 0
12:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:1/0/physics_layer_0/angular_velocity = 0.0
12:2/0 = 0
12:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:2/0/physics_layer_0/angular_velocity = 0.0
12:3/0 = 0
12:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:3/0/physics_layer_0/angular_velocity = 0.0
13:3/0 = 0
13:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:3/0/physics_layer_0/angular_velocity = 0.0
13:4/0 = 0
13:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:4/0/physics_layer_0/angular_velocity = 0.0
14:4/0 = 0
14:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:4/0/physics_layer_0/angular_velocity = 0.0
14:3/0 = 0
14:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:3/0/physics_layer_0/angular_velocity = 0.0
15:3/0 = 0
15:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:3/0/physics_layer_0/angular_velocity = 0.0
16:3/0 = 0
16:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:3/0/physics_layer_0/angular_velocity = 0.0
17:3/0 = 0
17:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:3/0/physics_layer_0/angular_velocity = 0.0
18:3/0 = 0
18:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:3/0/physics_layer_0/angular_velocity = 0.0
21:1/0 = 0
21:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:1/0/physics_layer_0/angular_velocity = 0.0
20:1/0 = 0
20:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:1/0/physics_layer_0/angular_velocity = 0.0
19:1/0 = 0
19:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:1/0/physics_layer_0/angular_velocity = 0.0
20:2/0 = 0
20:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:2/0/physics_layer_0/angular_velocity = 0.0
18:1/0 = 0
18:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:1/0/physics_layer_0/angular_velocity = 0.0
17:1/0 = 0
17:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:1/0/physics_layer_0/angular_velocity = 0.0
16:1/0 = 0
16:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:1/0/physics_layer_0/angular_velocity = 0.0
14:2/0 = 0
14:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:2/0/physics_layer_0/angular_velocity = 0.0
13:2/0 = 0
13:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:2/0/physics_layer_0/angular_velocity = 0.0
22:12/0 = 0
22:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
22:12/0/physics_layer_0/angular_velocity = 0.0
22:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
23:12/0 = 0
23:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
23:12/0/physics_layer_0/angular_velocity = 0.0
23:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
22:16/0 = 0
22:16/0/physics_layer_0/linear_velocity = Vector2(0, 0)
22:16/0/physics_layer_0/angular_velocity = 0.0
22:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
23:16/0 = 0
23:16/0/physics_layer_0/linear_velocity = Vector2(0, 0)
23:16/0/physics_layer_0/angular_velocity = 0.0
23:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
22:2/0 = 0
22:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
22:2/0/physics_layer_0/angular_velocity = 0.0
22:1/0 = 0
22:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
22:1/0/physics_layer_0/angular_velocity = 0.0
23:0/0 = 0
23:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
23:0/0/physics_layer_0/angular_velocity = 0.0
22:0/0 = 0
22:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
22:0/0/physics_layer_0/angular_velocity = 0.0
22:3/0 = 0
22:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
22:3/0/physics_layer_0/angular_velocity = 0.0
23:3/0 = 0
23:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
23:3/0/physics_layer_0/angular_velocity = 0.0
23:2/0 = 0
23:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
23:2/0/physics_layer_0/angular_velocity = 0.0
23:1/0 = 0
23:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
23:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_eux04"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_qsacf")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i1v2g"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v7gxm"]
size = Vector2(867.5, 20)

[node name="nivel1" type="Node2D"]
script = ExtResource("1_q1fmk")
player_scene = ExtResource("2_uxrv1")

[node name="Timer" parent="." instance=ExtResource("3_x5bvh")]

[node name="background" type="Sprite2D" parent="."]
position = Vector2(540, 151)
scale = Vector2(0.463153, 0.59261)
texture = ExtResource("3_dk8vs")

[node name="background2" type="Sprite2D" parent="."]
position = Vector2(542, 458.188)
scale = Vector2(0.464653, 0.588052)
texture = ExtResource("3_dk8vs")

[node name="background3" type="Sprite2D" parent="."]
position = Vector2(543, 761)
scale = Vector2(0.464653, 0.59261)
texture = ExtResource("3_dk8vs")

[node name="OpenDoor" type="Area2D" parent="."]
texture_filter = 1
position = Vector2(1027, 262)
scale = Vector2(7, 7)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="OpenDoor"]
position = Vector2(0.166687, 0.166664)
shape = SubResource("RectangleShape2D_o5lhx")

[node name="Sprite2D" type="Sprite2D" parent="OpenDoor"]
texture_filter = 1
position = Vector2(0.333435, 0.166664)
scale = Vector2(0.179487, 0.177083)
texture = ExtResource("8_4ljem")

[node name="ClosedDoor" type="Area2D" parent="."]
texture_filter = 1
position = Vector2(1029, 262)
scale = Vector2(7, 7)
script = ExtResource("6_0oint")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClosedDoor"]
position = Vector2(0.166687, 0.166656)
shape = SubResource("RectangleShape2D_o5lhx")

[node name="Sprite2D" type="Sprite2D" parent="ClosedDoor"]
texture_filter = 1
position = Vector2(0.333435, 0.166664)
scale = Vector2(0.179487, 0.177083)
texture = ExtResource("7_8cnrk")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_eux04")
cell_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(917505, 0, 0, 917507, 131072, 0, 917509, 262144, 0, 917511, 393216, 0, 917513, 524288, 0, 917515, 655360, 0, 1048577, 0, 2, 1048579, 131072, 2, 1048581, 262144, 2, 1048583, 393216, 2, 1048585, 524288, 2, 1048587, 655360, 2, 851983, 0, 0, 851985, 131072, 0, 851987, 524288, 0, 851989, 655360, 0, 983055, 0, 2, 983057, 131072, 2, 983059, 524288, 2, 983061, 655360, 2, 1114136, 0, 0, 1114138, 131072, 0, 1114140, 262144, 0, 1114142, 393216, 0, 1114144, 393216, 0, 1114146, 393216, 0, 1114148, 524288, 0, 1114150, 655360, 0, 1245208, 0, 2, 1245210, 131072, 2, 1245212, 262144, 2, 1245214, 393216, 2, 1245216, 393216, 2, 1245218, 393216, 2, 1245220, 524288, 2, 1245222, 655360, 2, 655390, 1441792, 12, 655391, 1048576, 16, 655392, 1114112, 16, 655393, 1179648, 16, 655394, 1245184, 16, 458769, 1048576, 16, 458768, 1441792, 12, 458766, 1048576, 12, 917527, 1310720, 16, 917528, 1507328, 16, 655388, 1048576, 12, 458770, 1048576, 16, 458771, 1048576, 16, 458772, 1114112, 16, 458773, 1179648, 16, 458774, 1245184, 16, 655389, 1114112, 12, 458767, 1114112, 12)
metadata/_edit_group_ = true

[node name="Cheese" type="Area2D" parent="."]
texture_filter = 1
position = Vector2(492, 191)
scale = Vector2(3, 3)
script = ExtResource("4_4vaue")
metadata/_edit_group_ = true

[node name="CheeseCatched" type="Sprite2D" parent="Cheese"]
visible = false
texture_filter = 1
position = Vector2(-141.333, -47.6667)
texture = ExtResource("5_spo2y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cheese"]
shape = SubResource("RectangleShape2D_i1v2g")

[node name="Cheese" type="Sprite2D" parent="Cheese"]
texture_filter = 1
texture = ExtResource("5_spo2y")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(633, 718)
scale = Vector2(2, 5)
script = ExtResource("6_r4nit")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("RectangleShape2D_v7gxm")

[node name="Players" type="Node2D" parent="."]

[node name="Markers" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Markers"]
position = Vector2(1027, 467)
gizmo_extents = 50.0

[node name="Marker2D2" type="Marker2D" parent="Markers"]
position = Vector2(70, 377)
gizmo_extents = 50.0

[node name="Labeltimer" type="Label" parent="."]
offset_left = 1035.0
offset_top = 5.0
offset_right = 1075.0
offset_bottom = 28.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="ClosedDoor" to="ClosedDoor" method="_on_body_entered"]
[connection signal="body_exited" from="ClosedDoor" to="ClosedDoor" method="_on_body_exited"]
[connection signal="body_entered" from="Cheese" to="Cheese" method="_on_body_entered"]
[connection signal="body_exited" from="Cheese" to="Cheese" method="_on_body_exited"]
[connection signal="body_entered" from="Area2D2" to="Area2D2" method="_on_area_2d_2_body_entered"]
